# guardian

./: .angulardoc.json  .cspell.json  .dclintrc  .editorconfig  .env  .env.develop.guardian.system  .env.example  .env.template  .env.template.guardian.system  .gitignore  .prettierignore  .yarnrc.yml  BOUNTY-PROGRAM.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  Makefile.justCOMPILE  Makefile.mac  README.md  RELEASE-CHECKLIST.md  RELEASE-MANAGEMENT-PLAN.md  ReleaseManagementPlan.md  SECURITY.md  TYMLEZ-README.md  dev.js  dev.mjs  docker-compose-DEV-ONLYSERVERS copy.yml  docker-compose-DEV-ONLYSERVERS.yml  docker-compose-analytics-build.yml  docker-compose-analytics.yml  docker-compose-aws.yml  docker-compose-build.yml  docker-compose-dev.yml  docker-compose-indexer-build.yml  docker-compose-indexer.yml  docker-compose-production-build.yml  docker-compose-production.yml  docker-compose-quickstart-build.yml  docker-compose-quickstart.yml  (+18 more)
carbon-atlas/: .env.example  .gitignore  .vercelignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  alembic.ini  components.json  docker-compose.yml  next.config.ts  package-lock.json  package.json  pyproject.toml  vitest.config.mts
carbon-atlas/__tests__/: format.test.ts  pdd-sections.test.ts  policy-registry.test.ts  trust-chain.test.ts  vc-documents.test.ts
carbon-atlas/alembic/: env.py  script.py.mako
carbon-atlas/alembic/versions/: 05cf7b544afe_initial_schema.py  7d2ef453cc5e_add_reduction_removal_column.py  94340ae229fb_add_corsia_eligible_column_to_projects.py
carbon-atlas/api/: CLAUDE.md  Dockerfile  main.py  schemas.py
carbon-atlas/api/db/: database.py  models.py
carbon-atlas/api/routers/: charts.py  credits.py  developers.py  events.py  projects.py
carbon-atlas/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
carbon-atlas/app/analytics/: page.tsx
carbon-atlas/app/api/proxy/[...path]/: route.ts
carbon-atlas/app/dashboard/: page.tsx  recent-issuances.tsx
carbon-atlas/app/devices/[messageId]/: page.tsx
carbon-atlas/app/documents/[messageId]/: page.tsx
carbon-atlas/app/issuances/: page.tsx
carbon-atlas/app/issuances/[messageId]/: page.tsx
carbon-atlas/app/market/: layout.tsx  page.tsx
carbon-atlas/app/market/developers/: page.tsx
carbon-atlas/app/market/projects/: page.tsx
carbon-atlas/app/policy/[slug]/: layout.tsx  policy-sync-layout.tsx
carbon-atlas/app/projects/: page.tsx
carbon-atlas/app/projects/[messageId]/: page.tsx
carbon-atlas/app/verify/: page.tsx
carbon-atlas/components/: app-sidebar.tsx  chart-area-interactive.tsx  dashboard-charts.tsx  dashboard-layout.tsx  data-table.tsx  device-map.tsx  nav-main.tsx  project-geographies-map.tsx  section-cards.tsx  site-header.tsx  vcu-projections-chart.tsx
carbon-atlas/components/market/: data-freshness-info.tsx  market-charts.tsx  market-stat-cards.tsx  world-map-chart.tsx
carbon-atlas/components/shared/: CopyableId.tsx  DeviceDataTable.tsx  FieldDisplay.tsx  HederaProofBadge.tsx  ProjectDeveloperBadge.tsx  ProjectLifecycleTimeline.tsx
carbon-atlas/components/trust-chain/: ChainStep.tsx  TrustChainView.tsx
carbon-atlas/components/ui/: map.tsx  place-autocomplete.tsx  popover.tsx
carbon-atlas/components/vc-views/: DeviceDataView.tsx  GenericVCView.tsx  MonitoringReportView.tsx  ProjectView.tsx  VCRenderer.tsx  VVBView.tsx  ValidationReportView.tsx  VerificationReportView.tsx
carbon-atlas/components/vc-views/vm0033/: PDDView.tsx  ProjectBoundaryMap.tsx
carbon-atlas/docs/: adding-a-new-policy.md  market-explorer.md
carbon-atlas/hooks/: useDashboardStats.ts  useMarketData.ts  usePolicyVcDocuments.ts  useVcDocument.ts
carbon-atlas/lib/api/: auth.ts  client.ts  market.ts  vc-documents.ts
carbon-atlas/lib/config/: networks.ts
carbon-atlas/lib/policies/: mecd.ts  registry.ts  renderers.ts  types.ts  vm0033.ts
carbon-atlas/lib/types/: indexer.ts  market.ts
carbon-atlas/lib/utils/: format.ts  hedera.ts  trust-chain.ts
carbon-atlas/pipeline/: change_detection.py  developer_normalization.py  extended_schema.py  process.py  project_types.py  reduction_removal.py  status_mapping.py
carbon-atlas/providers/: NetworkProvider.tsx  PolicyNetworkProvider.tsx  QueryProvider.tsx
carbon-atlas/tests/: conftest.py  test_api_endpoints.py  test_business_logic.py  test_models.py  test_new_charts.py  test_reference_projects.py  test_sdg_parsing.py
carbon-atlas/types/: react-simple-maps.d.ts
hedera-guardian-ai-toolkit/: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.gpu.yml  docker-compose.low-memory.yml  docker-compose.yml  pyproject.toml
hedera-guardian-ai-toolkit/docs/: CONTRIBUTING.md  DOCKER.md  MODELS.md  QUICKSTART.md  USER-GUIDE.md
hedera-guardian-ai-toolkit/tests/: conftest.py  test_pipeline_e2e.py
hedera-guardian-ai-toolkit/tests/document_ingestion_worker/: conftest.py
hedera-guardian-ai-toolkit/tests/document_ingestion_worker/integration/: __init__.py  test_document_pipeline_integration.py
hedera-guardian-ai-toolkit/tests/document_ingestion_worker/unit/: __init__.py  test_config.py  test_models.py  test_parallel_isolation.py  test_parallel_pipeline_mixed_formats.py  test_parser.py  test_pipeline.py  test_subprocess_protocol.py  test_subprocess_runner.py
hedera-guardian-ai-toolkit/tests/fixtures/docx/: README.md  create_fixtures.py  simple.docx  with_headings.docx  with_subscripts.docx  with_tables.docx
hedera-guardian-ai-toolkit/tests/fixtures/pdfs/: README.md
hedera-guardian-ai-toolkit/tests/hedera_guardian_mcp_server/integration/: conftest.py  test_mcp_tool_call.py  test_qdrant_connector.py
hedera-guardian-ai-toolkit/tests/hedera_guardian_mcp_server/unit/: conftest.py  test_filter_validation.py  test_mcp_search_filters.py  test_mcp_server_endpoints.py  test_mcp_tool_call.py
hedera-guardian-ai-toolkit/tests/schema_ingestion_worker/: conftest.py
hedera-guardian-ai-toolkit/tests/vector_store/: conftest.py  test_embeddings.py  test_ensure_payload_indexes.py  test_hybrid_search_filter.py  test_qdrant_connector.py  test_vector_models.py
(+11499 files in other folders)
