[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carbon-atlas-api"
version = "0.1.0"
description = "Carbon Atlas market data API — unified carbon credit registry data"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlmodel>=0.0.24,<1.0",
    "asyncpg>=0.30,<1.0",
    "psycopg2-binary>=2.9,<3.0",
    "alembic>=1.16,<2.0",
    "greenlet>=3.0,<4.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=19,<20",
    "python-dotenv>=1.1,<2.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.26,<1.0",
    "httpx>=0.28,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pytest_asyncio]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.hatch.build.targets.wheel]
packages = ["api", "pipeline"]
